Fix container gap and image dimensions

--- a/style.css
+++ b/style.css
@@ -60,16 +60,17 @@ body {
 .card-container {
     display: flex;
     justify-content: center;
+    gap: 50px;
 }
 
 .card {
-    width: 200px;
+    width: 150px;
 }
 
 .card-image {
     border-radius: 15px;
     border: 5px solid #3882f6;
-    height: 200px;
+    height: 150px;
 }
 
 .card p {
